--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,70 @@
+* {
+    font-family: 'Open Sans Condensed', sans-serif;
+    letter-spacing: 0.02em;
+}
+
+body {
+    font-size: 16px;
+    color: #464141;
+}
+
+a {
+    color: #0089FF;
+    text-decoration: none;
+}
+
+.car-card a:hover,
+.car-card a:focus,
+.car-card a:active {
+    color: #0089FF;
+    text-decoration: none;
+}
+
+.navbar {
+    min-height: 65px;
+    margin-bottom: 40px;
+}
+
+.navbar-default {
+    background-color: #F55757;
+    border-color: #F55757;
+}
+
+.navbar-default .navbar-brand,
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:active,
+.navbar-default .navbar-brand:focus,
+.navbar-default .navbar-nav>li>a,
+.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>li>a:active,
+.navbar-default .navbar-nav>li>a:focus {
+    color: #FFF;
+    height: 65px;
+    padding: 23px 15px;
+    font-weight: 200;
+    letter-spacing: 0.04em;
+}
+
+.car-card {
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    border-radius: 2px;
+    padding-bottom: 20px;
+}
+
+.car-card .full-name {
+    font-size: 22px;
+    margin: 11px 0 2px;
+}
+
+.car-card .info {
+    padding: 1px 20px;
+}
+
+.btn {
+    font-size: 16px;
+    border: 0;
+}
+
 .dropzone {
     border: 2px dashed rgba(61, 36, 167, 0.7) !important;
     padding: 33px 20px !important;
