--- a/public/css/instantsearch-style.css
+++ b/public/css/instantsearch-style.css
@@ -9,7 +9,7 @@
 html {
 	overflow-y: scroll;
 }
-header, main, #no-results, footer {
+main, #no-results, footer {
 	width: 1200px;
 	margin: 0 auto;
 }
@@ -43,20 +43,22 @@ header img {
 	max-width: 23%;
 }
 #search-input {
-	font-size: 28px;
+	font-size: 21px;
 	font-weight: 100;
-	width: 74%;
-	margin-left: 26%;
+	width: 100%;
 	padding: 10px 0 6px;
 	border: none;
 	border-bottom: 5px solid #eee;
+}
+.search-input-container {
+	margin-bottom: 30px;
 }
 #search-input, #search-input:focus {
 	transition: border-color .3s ease-in;
 	outline: 0;
 }
 #search-input:focus {
-	border-color: #ed5565;
+	border-color: #F25F5C;
 }
 #search-input::-webkit-input-placeholder, #search-input:-moz-placeholder, #search-input:-moz-placeholder, #search-input:-ms-input-placeholder {
 	font-weight: 100;
@@ -97,7 +99,7 @@ header img {
 }
 .hit-image {
 	display: inline-block;
-	width: 16%;
+	width: 32%;
 }
 .hit-image img {
 	max-width: 100%;
@@ -107,15 +109,15 @@ header img {
 	font-size: 13px;
 	font-weight: 300;
 	display: inline-block;
-	width: 83%;
-	margin-left: 1%;
+	width: 60%;
+	margin-left: 8%;
 	vertical-align: top;
 }
 .hit-content .hit-price {
 	font-size: 20px;
 	float: right;
 	margin-left: 20px;
-	color: #ed5565;
+	color: #F25F5C;
 }
 .hit-content .hit-price, .hit-content .hit-name {
 	font-weight: normal;
@@ -127,6 +129,17 @@ header img {
 }
 .hit-content .hit-description {
 	color: #999;
+}
+
+.hit-content .hit-description h4 {
+	margin-bottom: 0;
+}
+
+.hit-content .hit-name  a,
+.hit-content .hit-name a:hover {
+	text-decoration: none;
+	color: #50514F;
+	margin-bottom: 0;
 }
 
 
@@ -167,8 +180,8 @@ header img {
 }
 #pagination li.active a {
 	color: white;
-	border-color: #ed5565;
-	background: #ed5565;
+	border-color: #F25F5C;
+	background: #F25F5C;
 }
 #pagination li.active a:hover {
 	cursor: default;
@@ -259,11 +272,11 @@ header img {
 	color: #000;
 }
 .facet-link:hover, .facet-link.facet-refined {
-	color: #ed5565;
+	color: #F25F5C;
 }
 .facet .facet-link.facet-refined:hover {
 	text-decoration: line-through;
-	color: #ed5565;
+	color: #F25F5C;
 }
 .facet-count {
 	position: relative;
@@ -369,9 +382,9 @@ footer {
 }
 footer a {
 	text-decoration: none;
-	color: #ed5565;
+	color: #F25F5C;
 }
 footer a:hover {
 	text-decoration: underline;
-	color: #ed5565;
+	color: #F25F5C;
 }
