--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -143,7 +143,7 @@ label {
 .btn-success:focus,
 .btn-success:visited
 {
-    background-color: #70C1B3;
+    background-color: #2aa08c;
 }
 
 .dropzone {
