--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -3,12 +3,14 @@
 */
 
 * {
-    font-family: 'Open Sans Condensed', sans-serif;
+    /*font-family: 'Open Sans Condensed', sans-serif;*/
+    /*font-family: 'Lato', sans-serif;*/
+    font-family: 'Source Sans Pro', sans-serif;
     letter-spacing: 0.02em;
 }
 
 body {
-    font-size: 18px;
+    font-size: 16px;
     color: #50514F;
 }
 
